# BeagleBone-I2C

./: .gitignore  BBBI2CDevice.cpp  BBBI2CDevice.h  CMakeLists.txt  ExceptionAid.h  I2CDevice.cpp  I2CDevice.h  IDevice.h  II2CDevice.h  README.md  main.cpp
Device/: I2CDevice.cpp
Exceptions/: ExceptionAid.h
Lib/Device/: IDevice.h
Lib/Exceptions/: ExceptionAid.h
Lib/I2C/: I2CDevice.cpp  I2CDevice.h
